# PracticalSkills

CosineSimilarity/: CosineSimilarity.cpp  Readme.md
Fishing/: CMakeLists.txt  Readme.md
Fishing/include/: Fishing.h
Fishing/source/: CMakeLists.txt  Fishing.cpp  main.cpp
HtmlEdit/: CMakeLists.txt  Readme.md  main.cpp
MovieDatabase/: CMakeLists.txt  Readme.md
MovieDatabase/include/db/: Database.h  MediaRepository.h  MovieRepository.h
MovieDatabase/include/models/: Media.h  Movie.h
MovieDatabase/include/utils/: FileUtils.h  StringUtils.h
MovieDatabase/src/: main.cpp
MovieDatabase/src/db/: MediaRepository.cpp  MovieRepository.cpp
MovieDatabase/src/utils/: FileUtils.cpp  StringUtils.cpp
QmlPlayer/: CMakeLists.txt  Main.qml  Readme.md  main.cpp
QtBrowser/: htmlEdit.cpp  htmlEdit.h  htmlEdit.ui
SearchEngine/: Readme.md  SearchEngine.cpp  SearchEngine.cs
